devops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrtest
  namespace: luca
spec:
  selector:
    matchLabels:
      app: qrtest
  replicas: 1
  template:
    metadata:
      labels:
        app: qrtest
    spec:
      containers:
        - name: qrtest
          image: registry.waveinformatica.com/luca/qrtest:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
