devops/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: qrtest
  namespace: luca
spec:
  type: ClusterIP
  selector:
    app: qrtest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
