devops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qrtest-ingress
  namespace: luca
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "qrtest.cloud.apeironlab.tech"
      secretName: qrtest-tls
  rules:
    - host: "qrtest.cloud.apeironlab.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qrtest
                port:
                  number: 3000
